<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/toolbar"
        android:elevation="2dp"
        app:title="Sunrise and Sunset"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Latitude EditText -->
    <EditText
        android:id="@+id/editTextLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_latitude"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/editTextLongitude"/>

    <!-- Longitude EditText -->
    <EditText
        android:id="@+id/editTextLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextLatitude"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <!-- Lookup Button -->
    <Button
        android:id="@+id/lookupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/look_up"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextLongitude"/>

    <!-- sunrise TextView -->
    <TextView
        android:id="@+id/sunrise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunrise_time"
        android:visibility="visible" />

    <!-- sunset TextView -->
    <TextView
        android:id="@+id/sunset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunset_time"
        android:visibility="visible" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>

